--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lineage-diagram-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://signior-x.github.io/lineage-diagram-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -21,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -48,6 +51,7 @@
   "devDependencies": {
     "@types/dagre": "^0.7.48",
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
